# personal-works

./: .gitignore
learnings/llm-finetuning-journey/: llm_finetuning_curriculum_18months.md  main.py  pyproject.toml  requirements.txt
learnings/llm-finetuning-journey/Detailed Curriculum/: STATUS.md  _STYLE_GUIDE.md
learnings/llm-finetuning-journey/Detailed Curriculum/Week_1/: 1_Curriculum.md  2_Resources.md  3_Assignment.md  4_AssignmentSolutions.md  5_Quiz.md  6_Answers.md  7_Glossary.md  8_TakeAway.md
learnings/llm-finetuning-journey/Detailed Curriculum/Week_10/: 1_Curriculum.md  2_Resources.md  3_Assignment.md  4_AssignmentSolutions.md  5_Quiz.md  6_Answers.md  7_Glossary.md  8_TakeAway.md
learnings/llm-finetuning-journey/Detailed Curriculum/Week_11/: 1_Curriculum.md  2_Resources.md  3_Assignment.md  4_AssignmentSolutions.md  5_Quiz.md  6_Answers.md  7_Glossary.md  8_TakeAway.md
learnings/llm-finetuning-journey/Detailed Curriculum/Week_12/: 1_Curriculum.md  2_Resources.md  3_Assignment.md  4_AssignmentSolutions.md  5_Quiz.md  6_Answers.md  7_Glossary.md  8_TakeAway.md
learnings/llm-finetuning-journey/Detailed Curriculum/Week_13/: 1_Curriculum.md  2_Resources.md  3_Assignment.md  4_AssignmentSolutions.md  5_Quiz.md  6_Answers.md  7_Glossary.md  8_TakeAway.md
learnings/llm-finetuning-journey/Detailed Curriculum/Week_14/: 1_Curriculum.md  2_Resources.md  3_Assignment.md  4_AssignmentSolutions.md  5_Quiz.md  6_Answers.md  7_Glossary.md  (+1 more)
learnings/llm-finetuning-journey/KBase/: uv.md
learnings/llm-finetuning-journey/Templates/: New Journal Entry.md
(+586 files in other folders)
